# Hyperego_pub

./: .gitignore
app/hyperego-app/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/hyperego-app/src/: App.vue  main.ts  router.js  style.css
app/hyperego-app/src/components/: AboutPage.vue  BlueprintComponent.vue  LandingPage.vue  Navbar.vue  PricingPage.vue  SearchPage.vue  SignUpForm.vue  StepperForm.vue  SubscriptionForm.vue
data/: lawyerscrape_googles_raw.json  lawyerscrape_linkedin_raw.json  lawyerscrape_raw.json  simionscrape_facebook_raw.json
hyperego/: pyproject.toml
hyperego/hyperego/: __main__.py
hyperego/hyperego/ai/: __init__.py  image_captioner.py  post_analyzer.py
hyperego/hyperego/core/: __init__.py  run.py
hyperego/hyperego/scrapers/: __init__.py  duckduckgo.py  facebook.py  googlesearch.py  instagram.py  linkedin.py  scraper_interface.py
hyperego/hyperego/server/: __init__.py  server.py  shared.py  ws.py
hyperego/tests/: convertor.py
hyperego/tests/ai/: test_image_labels.py  test_post_analysis.py
hyperego/tests/core/: test_hyperego.py
